<resources>
    <string name="app_name">APass</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">APass</string>
    <string name="pwd_not_match">Пароли не совпадают!</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Отмена</string>
    <string name="wrong_result">Ошибка!</string>
    <string name="pwd_short">Пароль слишком короткий!</string>
    <string name="pwd_incorrect">Неверный пароль!</string>
    <string name="wrong_open">Ошибка открытия!</string>
    <string name="name_login_empty">Имя или логин пусты!</string>
    <string name="name_already_exist">Такое имя уже занято!</string>
    <string name="create">Создать</string>
    <string name="done">Готово</string>
    <string name="record_name">Имя записи</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="description">Описание</string>
    <string name="copy_pass">Copy pass</string>
    <string name="password_generator">password generator</string>
    <string name="copy_login">copy login</string>
    <string name="secure">secure</string>
    <string name="master_password">Мастер-пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="create_new_base">Создание новой базы</string>
    <string name="search">Поиск</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="enter">Войти</string>
    <string name="open_base">Открытие базы</string>
    <string name="mater_password">Мастер-пароль</string>
    <string name="count_symbols">Количество символов</string>
    <string name="_0_9">0..9</string>
    <string name="a_z">a..z</string>
    <string name="a_z_up">A..Z</string>
    <string name="a_z_ru">а..я</string>
    <string name="a_z_ru_up">А..Я</string>
    <string name="spec_symb_layout"><![CDATA[! ? @ # $ % ^ & * ( ) - _]]></string>
    <string name="generate">Сгенерировать</string>
    <string name="your_pass">Ваш пароль</string>
    <string name="no_symbols_set">Не выбрано наборов символов!</string>
    <string name="pass_not_gnerated">Пароль не сгенерирован!</string>
    <string name="confirmation">Подтверждение</string>
    <string name="is_delete_record">Удалить запись?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
