<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAction"
            android:layout_width="194dp"
            android:layout_height="57dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="425dp"
            android:text="@string/done"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/record_name"
            app:layout_constraintBottom_toTopOf="@+id/editName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/editName"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/editLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/editLogin"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txtRepeatPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="250dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/editPass"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/editPass" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083" />

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="42dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            app:layout_constraintHorizontal_bias="0.503" />


        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/editTextDesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/editTextDesc"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />

        <ImageButton
            android:id="@+id/ibtnCopyPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editPass"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/editPass"
            app:layout_constraintTop_toTopOf="@+id/editPass"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="?android:attr/actionModeCopyDrawable"
            android:contentDescription="@string/copy_pass" />

        <ImageButton
            android:id="@+id/ibtnCopyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editLogin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/editLogin"
            app:layout_constraintTop_toTopOf="@+id/editLogin"
            app:layout_constraintVertical_bias="0.47"
            app:srcCompat="?android:attr/actionModeCopyDrawable"
            android:contentDescription="@string/copy_login" />

        <ImageButton
            android:id="@+id/ibtnGenerator"
            android:layout_width="47dp"
            android:layout_height="48dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editPass"
            app:layout_constraintLeft_toRightOf="@+id/editPass"
            app:layout_constraintTop_toTopOf="@+id/editPass"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:contentDescription="@string/password_generator" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editPass"
            android:layout_width="222dp"
            android:layout_height="55dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="38dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLogin"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteY="253dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/ibtnSecure"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/lock"
            android:contentDescription="@string/secure" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>